# ONN

./: .gitignore  README.md  colab_setup.py  pyproject.toml  requirement.txt  requirements-py312.txt  requirements_audit.txt
benchmarks/: ddl_vs_resnet.py  delta_vs_euler_training.py  pendulum_benchmark.py
config/: constraint_defaults.yaml
data/: utils.py
experiments/: config.yaml  run_eval.py  run_train.py  validate_hybrid.py  validate_onn_es.py  validate_phase2.py
experiments/results/: hybrid_validation_20260103_043937.json  hybrid_validation_20260103_044713.json  hybrid_validation_20260103_044808.json  onn_es_validation_20260103_042137.json  onn_es_validation_20260103_042211.json  onn_es_validation_20260103_042257.json  onn_es_validation_20260103_042324.json  (+5 more)
models/: embedding.py  encoder.py  interaction.py  onn.py  predictor.py
outputs/: hardening_report.md  repro_env.txt  result.txt
results/: 20260107#pytest-q.txt  20260107#sparse_warning.txt  20260107#train_dryrun.txt
scripts/: eval_oscillator.py  eval_vanderpol.py  train_collatz.py  train_collatz_binary.py  train_onn_es.py  train_oscillator.py  train_rfonn.py  train_tlm.py  train_vanderpol.py  visualize_onn.py
spec/: 00_high_level_plan.md  01_constraints.md  02_onn_math_spec.md  10_architecture.ir.yml  11_interfaces.ir.yml  12_brain_blueprint.md  20_impl_plan.ir.yml  21_test_plan.ir.yml  30_code_status.ir.yml  31_todo_backlog.ir.yml  40_brain_computation_blueprint.md
src/: __init__.py
tests/: __init__.py
train/: evaluator.py  loss.py  trainer.py
utils/: graph_tools.py  metrics.py
(+162 files in other folders)
