[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onn-es"
version = "0.1.0"
description = "Ontology Neural Network + Evolutionary Strategy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]
